01 - OpenCRVS Documentation/v1.9/product-specifications/core-functions/11.-vital-statistics-export.md
---
title: "11. Vital statistics export"
source_url: "https://documentation.opencrvs.org/v1.9/product-specifications/core-functions/11.-vital-statistics-export"
markdown_url: "https://documentation.opencrvs.org/v1.9/product-specifications/core-functions/11.-vital-statistics-export.md"
version: "v1.9"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:8c0427dfcb608ba73a2cda76b2cacd39ab4f4b9077d92fbbb760aadf84776d4a"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.9/product-specifications/core-functions/11.-vital-statistics-export.md).

# 11. Vital statistics export

Vital statistics refer to the data set assembled from vital events related to the population, encapsulating not only the event details but also characteristics of the individuals involved.

{% hint style="warning" %}
As of 1.9 support for exporting vital statistics is handled with Metabase.\
\
In Metabase you can configure a table of records that only contain data from OpenCRVS configured as `analytics=true`
{% endhint %}

**Triggers**

A user has `performance.read` and has been requested to provide vital statistics data

### **Standard flow**

1. User navigates to the configured Metabse dashboard/table
2. User select the required time period
3. User clicks “Export”
4. User select the location on their computer they want .csv to download too

### **Post conditions**

* User can choose to export another month of vital statistics data


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.9/product-specifications/core-functions/11.-vital-statistics-export.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
